# pipeline-dash

./: .gitattributes  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  todo.md  todo.py
config/: jobs_file.md
config/examples/: example.md
demo/: README.md  pipeline_full.yaml  pipeline_per_cloud.yaml
demo/jjb/: jenkins_demo.yaml
jenkins-query/: auth.py  cyto.py  main.py  pipeline_utils.py  viz_dash.py  viz_plotly.py  viz_rich.py
jenkins-query/viz/: viz_rich.py
jenkins-query/viz/dash/: viz_dash.py
jenkins-query/viz/dash/assets/: custom_tabulator.js
jenkins-query/viz/dash/components/: __init__.py  graph_col.py  jobs_pipeline_fig.py  left_pane.py
jenkins_query/: __init__.py  job_data.py  main.py  pipeline_utils.py  utils.py
jenkins_query/viz/: viz_cyto.py  viz_rich.py
jenkins_query/viz/dash/: network_graph.py  partial_callback.py  viz_dash.py
jenkins_query/viz/dash/assets/: custom_tabulator.js
jenkins_query/viz/dash/components/: __init__.py  graph_col.py  graph_tooltip.py  job_pane.py  jobs_pipeline_fig.py  left_pane.py
jenkins_query/viz/dash/components/aio/: button_split_option.py
jenkins_query/viz/dash/templates/: bootstrap.json
pipeline_dash/: __init__.py  __main__.py  auth.py  job_data.py  main.py  pcprofile.py  pipeline_config_schema.py  pipeline_utils.py  utils.py
pipeline_dash/importer/: jenkins.py  utils.py
pipeline_dash/viz/: viz_rich.py
pipeline_dash/viz/dash/: cache.py  logged_callback.py  network_graph.py  partial_callback.py  viz_dash.py
pipeline_dash/viz/dash/assets/: custom_tabulator.js
pipeline_dash/viz/dash/components/: graph_col.py  graph_tooltip.py  job_pane.py  jobs_pipeline_fig.py  left_pane.py
pipeline_dash/viz/dash/components/aio/: __init__.py  button_split_option.py
pipeline_dash/viz/dash/templates/: darkly.json
snap/: snapcraft.yaml
test/: test_pipeline_utils.py
tmp/: style.css
