[tool.poetry]
name = "jenkins-query"
version = "0.1.0"
description = ""
authors = ["Stefan Hammer <hammerstefan@gmail.com>"]
readme = "README.md"
packages = [{include = "jenkins_query"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dash-bootstrap-components = "^1.2.1"
dash-bootstrap-templates = "^1.0.7"
dash-cytoscape = "^0.3.0"
dash = "^2.7.0"
mergedeep = "^1.3.4"
more-itertools = "^8.12.0"
networkx = "^2.8.8"
plotly = "^5.11.0"
python-jenkins = "^1.7.0"
requests = "^2.28.1"
rich = "^12.6.0"
textual = "^0.5.0"
urllib3 = "^1.26.13"
aiohttp = "^3.8.3"
dash-tabulator = "^0.4.2"
pyyaml = "^6.0"
typing-extensions = "^4.4.0"
dash-extensions = "^0.1.7"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
